--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,42 @@
-theme: jekyll-theme-cayman
-site.github.is_project_page: true
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: vandsh - breaker of things
+email: steve.vandenbush@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Jack of all trades, master of none? I love all things code but the main focus for me recently has been Content Management Systems 
+  (Sitecore, Drupal, Wordpress, Kentico etc).  These are just some of my ramblings.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://vandsh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: vandsh
+github_username:  vandsh
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
