--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,11 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+feed:
+  categories:
+    - Sitecore
+    - Kentico
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
